namespace Utilities;

public enum SortDirection
 {
     Asceding = 0,
     Descending = 1
 }
